@@ -1,3 +1,7 @@
+2016-05-17 0.8.1 alpha
+Fix bugs in the particle system.
+Add particle look at option.
+
 2016-05-16 0.8.1 alpha
 Finish the particle system.
 It should become a part of SMELT someday.
